--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 body{
-	background: #DCDDDF;
+	background: #dcdddf;
 	overflow: auto;
 }
 .mainframe {
@@ -15,23 +15,26 @@ body{
 }
 .left_unit {
 	margin: 10px 10px 0px 10px;
-	height: 500px;
+	min-height: 900px;
 	border: 1px dashed blue;
 	
 }
 .right_unit {
 	margin: 10px 10px 0px 0px;
-	height: 500px;
+	height: 400px;
 
 	border: 1px dashed green;
 	
+}
+.wrap_init-inn {
+	margin: 0 auto;
 }
 
 .right_unit-inn {
 	display: block;
 	outline: none;
-	width: 90%;
-	margin: 14px auto;
+	margin: 0 auto;
+	margin-top: 20px;
 	font: 24px Helvetica, Arial, sans-serif;
 	text-align: center;
 	background: #f9f5f5;
@@ -47,10 +50,24 @@ body{
 	background: #f5fbc6;
 }
 .result_name_org {
-	margin: 10px 12px;
-	padding: 10px;
-	border: 1px solid green;
+	width: 86%;
+	margin: 0 auto;
+	padding: 5px;
+	border: 3px solid #7EA474;
 	border-radius: 5px;
+	
+	background-color: #7EA474;
+	
+}
+.result_name_org:hover {
+	
+
+}
+.result_name_org a:hover {
+	
+	color: yellow;
+	background-color: #7EA474;
+	
 }
 
 .result_name_org a {
@@ -59,8 +76,9 @@ body{
 	font: 18px Helvetica, Arial, sans-serif;
 	text-align: center;
 	font-weight: 100;
-	color: #2a6dbb;
-
+	color: #2864EB;
+	min-height: 20px;
+	padding: 0;
 	line-height: 22px;
 
 }
@@ -69,30 +87,43 @@ body{
 }
 
 .result_inn_org {
-	margin: 10px 12px;
-	padding: 10px;
-	border: 1px solid green;
+	width: 86%;
+	margin: 0 auto;
+	margin-top: 10px;
+	padding: 5px;
+	border: 3px solid #7EA474;
 	border-radius: 5px;
+	height: 20px;
+	background-color: #7EA474;
 }
-
+.result_inn_org:hover {
+	
+}
 .result_inn_org a {
-	display: block;
+	display: block; 
 	text-decoration: none;
 	font: 18px Helvetica, Arial, sans-serif;
 	text-align: center;
 	font-weight: 100;
-	color: #2a6dbb;
+	color: #2864EB;
+	
 }
-.bank_region {
-	margin: 10px 12px;
-	padding: 10px;
-	border: 1px solid green;
-	border-radius: 5px;
+.result_inn_org a:hover {
+	color: yellow;
+} 
 
+
+.bank_region {
+	width: 86%;
+	margin: 0 auto;
+	margin-top: 10px;
+	padding: 5px;
+	border: 3px solid #7EA474;
+	border-radius: 5px;
+	min-height: 10px;
 	display: block;
 	text-decoration: none;
 	font: 16px Helvetica, Arial, sans-serif;
 	text-align: center;
-	font-weight: 100;
 	color: #f13238;
 }
